--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
     <style>
         body {
             background-color: #f2f4f7;
-            font-weight: 500
+            font-weight: 500;
+            color: black
         }
 
         .toast:not(.show) {
