--- a/FE/Views/Home/Friend/PopupAddFriend.cshtml
+++ b/FE/Views/Home/Friend/PopupAddFriend.cshtml
@@ -83,7 +83,7 @@
                         <div style="width: 100px; position: relative; margin-right: 16px">
                             <img src="@Model.ProfilePicture"
                                  class="rounded-circle;"
-                                 height="100"
+                                 height="100" width="100"
                                  style="border: 3px solid white;
                                         border-radius: 50%;
                                         background-color: white;
@@ -91,7 +91,8 @@
                                         top: 50%;
                                         left: 50%;
                                         -ms-transform: translate(-50%, -50%);
-                                        transform: translate(-50%, -50%);" />
+                                        transform: translate(-50%, -50%);
+                                        object-fit: cover" />
                         </div>
                         <span class="fs-5"
                               style="color: rgb(8,8,9)">@Model.HoVaTen</span>
@@ -174,7 +175,7 @@
                         <div style="width: 100px; position: relative; margin-right: 16px">
                             <img src="@Model.ProfilePicture"
                                  class="rounded-circle;"
-                                 height="100"
+                                 height="100" width="100"
                                  style="border: 3px solid white;
                                 border-radius: 50%;
                                 background-color: white;
@@ -182,7 +183,8 @@
                                 top: 50%;
                                 left: 50%;
                                 -ms-transform: translate(-50%, -50%);
-                                transform: translate(-50%, -50%);" />
+                                transform: translate(-50%, -50%);
+                                object-fit: cover" />
                         </div>
                         <span class="fs-5"
                               style="color: rgb(8,8,9)">@Model.HoVaTen</span>
