--- a/FE/Views/Home/Friend/_FriendPartial.cshtml
+++ b/FE/Views/Home/Friend/_FriendPartial.cshtml
@@ -3,7 +3,7 @@
          style="padding: 10px 12px; box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 4px 0px; border: 0">
         <div class="d-flex">
             <img class="rounded-circle"
-                 style="margin: 6px"
+                 style="margin: 6px; object-fit: cover"
                  width="36" height="36"
                  src='@(ViewBag.BeURL + "/Files/Common/NoPicture.png")' />
             <div class="d-flex align-items-center"
