--- a/FE/Views/Home/Index.cshtml
+++ b/FE/Views/Home/Index.cshtml
@@ -23,6 +23,7 @@
         margin: 2px 0;
         padding: 0px 8px;
         width: 100%;
+        transition: box-shadow 0.2s ease;
     }
 
     .btn-Functions:hover,
@@ -31,14 +32,10 @@
     }
 
     .btn-Functions.active {
-        background-color: rgba(0,0,0,0.06);
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset!important;
         border-radius: 8px;
         pointer-events: none;
     }
-
-    /*::-webkit-scrollbar {
-        width: 12px;
-    }*/
 
     /* Track */
     #Functions-container::-webkit-scrollbar-track:hover {
@@ -59,7 +56,7 @@
         margin-left: 16px;
         background-color: white;
         border-radius: 12px;
-        box-shadow: 0px 0px 8px rgba(52, 72, 84, .05);
+        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
         display: flex;
         flex: 2;
     }
@@ -150,7 +147,7 @@
                      class="rounded-circle"
                      src="@User.ProfilePicture"
                      width="32" height="32"
-                     style="margin: 0 6px" />
+                     style="margin: 0 6px; object-fit: cover" />
                 <span id="Name-ProfilePicture"
                       style="text-transform: none; font-size: 14px; font-weight: 500; color: black">@User.Ten</span>
             </button>
@@ -176,7 +173,7 @@
 
     <!-- Tin nhắn -->
     <div id="Messages">
-        <div class="card text-center flex-grow-1" style="box-shadow: 0px 0px 8px rgba(52, 72, 84, .05);">
+        <div class="card text-center flex-grow-1" style="box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;">
             <div class="card-header">Featured</div>
             <div class="card-body">
                 Message - Tin nhắn
@@ -344,6 +341,8 @@
     }
 
     function SwitchToScreen(screen) {
+        changeFaRularToFaSolid(screen)
+
         if (screen === "TabMessageList") {
             $.get("@Url.Action("Index", "MessageList")", function (data) {
                 $("#MessageList").html(data);
@@ -355,8 +354,6 @@
         } else if (screen === "TabMessageWaiting") {
             $("#MessageList").html("Tin nhắn đang chờ<br/>Tính năng đang thực hiện");
         }
-
-        changeFaRularToFaSolid(screen)
     }
 
     function changeFaRularToFaSolid(screen) {
