--- a/FE/Views/Home/MessageList/_SearchResultPartial.cshtml
+++ b/FE/Views/Home/MessageList/_SearchResultPartial.cshtml
@@ -23,7 +23,7 @@
                     data-mdb-ripple-color="dark"
                     onclick="transToChatScreen('@user.Id')">
                 <img class="rounded-circle"
-                     style="margin: 6px"
+                     style="margin: 6px; object-fit: cover"
                      width="36" height="36"
                      src='@(String.IsNullOrEmpty(user.ProfilePicture) || String.IsNullOrEmpty(user.ProfilePicture) ? ViewBag.BeURL + "/Files/Common/NoPicture.png" : ViewBag.BeURL + "/" + user.ProfilePicture)' />
                 <div class="d-flex flex-column">
