--- a/FE/Views/Home/Contact/FriendRequest/_TabFriendRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/FriendRequest/_TabFriendRequestPartial.cshtml
@@ -11,7 +11,7 @@
     <div class="py-3" 
          style="overflow-y: auto; 
                 height: calc(100% - 60px);
-                scrollbar-color: rgba(0, 0, 0, 0.3) rgb(245, 245, 245);">
+                scrollbar-color: rgba(0, 0, 0, 0.3) rgba(245, 245, 245, 0);">
         @* Lời mời đã nhận *@
         <div id="ReceiveRequest"></div>
 
