--- a/FE/Views/Home/Message/_MessagePartial.cshtml
+++ b/FE/Views/Home/Message/_MessagePartial.cshtml
@@ -16,7 +16,7 @@
             <img class="rounded-circle"
                  style="margin: 6px; object-fit: cover"
                  width="36" height="36"
-                 src='@(String.IsNullOrEmpty(Model.ProfilePicture) || String.IsNullOrEmpty(Model.ProfilePicture) ? ViewBag.BeURL + "/Files/Common/NoPicture.png" : ViewBag.BeURL + "/" + Model.ProfilePicture)' />
+                 src='@(Model.ProfilePicture)' />
             <div class="d-flex align-items-center"
                  style="padding: 6px 6px 6px 2px; color: rgb(5,5,5); font-size: 15px; font-weight: 500; line-height: 20px">
                 <span style="text-align: start">@Model.HoVaTen</span>
