--- a/FE/Views/Home/Contact/FriendRequest/_ReceiveRequestPartial.cshtml
+++ b/FE/Views/Home/Contact/FriendRequest/_ReceiveRequestPartial.cshtml
@@ -43,8 +43,9 @@
                 {
                     <div class="col p-0"
                          @*style="width: calc(100% / 3); max-width: 345px"*@>
-                        <div class="p-2 bg-white rounded-3"
-                             style="cursor: pointer; box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;">
+                        <div onclick="ShowPopupAddFriend('@req.Id', 2)"
+                            class="p-2 bg-white rounded-3"
+                            style="cursor: pointer; box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;">
                             @* Header *@
                             <div class="d-flex justify-content-between">
                                 <div class="d-flex">
@@ -103,6 +104,7 @@
 <script>
     // Chuyển giao diện nhắn tin với User
     function transToChatScreen(userId) {
+        event.stopPropagation(); // Ngăn sự kiện click lan lên div
         showLoading(true)
         $.ajax({
             url: "@Url.Action("GetByUserId", "Message")",
@@ -124,6 +126,8 @@
             }
         })
     }
+
+    
 </script>
 
 
