--- a/FE/Views/Home/Friend/PopupAddFriend.cshtml
+++ b/FE/Views/Home/Friend/PopupAddFriend.cshtml
@@ -1,4 +1,27 @@
 ﻿@model MODELS.FRIENDREQUEST.Requests.POSTFriendRequest;
+@{ 
+    // Name of function: tên của hàm theo các case
+    // 1. Gửi lời mời kết bạn
+    // 2. Đồng ý yêu cầu kết bạn
+    // 3. Hủy yêu cầu kết bạn
+    Dictionary<int, string> NOF = new Dictionary<int, string>
+    {
+        {1, "AddFriend()" },
+        {2, $"updateFriendRequest('{Model.Id}', 1)"},
+        {3, "RecallFriendRequest()" }
+    };
+
+    // Content of button: nội dung của button theo các case
+    // 1. Kết bạn
+    // 2. Đồng ý
+    // 3. Hủy kết bạn
+    Dictionary<int, string> COB = new Dictionary<int, string>
+    {
+        {1, "Kết bạn" },
+        {2, "Đồng ý"},
+        {3, "Hủy kết bạn" }
+    };
+}
 
 <style>
     #FriendMessageContent:empty::before {
@@ -101,7 +124,7 @@
                             class="rounded position-relative"
                             style="padding: 16px 16px 48px; border: 1px solid lightgray">
                         <div id="FriendMessageContent"
-                                contenteditable="true"
+                                contenteditable="@(ViewBag.Case == 1 ? "true" : "false")"
                                 data-placeholder="Aa"
                                 style="color: rgb(5,5,5);
                                 font-size: .9375rem;
@@ -111,14 +134,17 @@
                                 height: 60.3px;
                                 outline: 0;
                                 overflow-y: auto;
-                                overflow-x: hidden"></div>
+                                overflow-x: hidden;"
+                             >
+                            @(ViewBag.Case == 1 ? "" : Model.Message)
+                        </div>
                         <span id="FriendMessageCount"
                               class="position-absolute"
                               style="right: 16px; 
                                      bottom: 16px; 
                                      pointer-events: none;
                                      line-height: 1;
-                                     color: var(--bs-tertiary-color)">0/150 ký tự</span>
+                                     color: var(--bs-tertiary-color)">@(ViewBag.Case == 1 ? "0" : Model.Message.Length)/150 ký tự</span>
                     </div>
                 </div>
             </div>
@@ -130,7 +156,9 @@
                         class="btn btn-secondary" 
                         id="btnInfo">Thông tin</button>
                 @* Kết bạn button *@
-                <button type="button" class="btn btn-primary">Kết bạn</button>
+                <button type="button"
+                        onclick="@NOF[ViewBag.Case]"
+                        class="btn btn-primary">@COB[ViewBag.Case]</button>
             </div>
         </div>
 
@@ -191,12 +219,16 @@
                     </div>
                     
                     <div class="d-flex justify-content-between bg-white">
-                        <button type="button" 
-                                class="btn btn-light fw-bold lh-1" 
+                        <button type="button"
+                                onclick="@NOF[ViewBag.Case]"
+                                class="btn btn-light fw-bold lh-1"
                                 style="width: 49%; text-transform: none; font-size: 16px; padding: 10px 12px"
-                                data-mdb-ripple-init 
-                                data-mdb-ripple-color="dark">Kết bạn</button>
+                                data-mdb-ripple-init
+                                data-mdb-ripple-color="dark">
+                            @COB[ViewBag.Case]
+                        </button>
                         <button type="button" 
+                                onclick="transToChatScreen('@Model.User.Id')"
                                 class="btn btn-secondary fw-bold lh-1"
                                 style="width: 49%; text-transform: none; font-size: 16px; padding: 10px 12px"
                                 data-mdb-ripple-init>Nhắn tin</button>
@@ -220,7 +252,8 @@
         </div>
     </div>
 </div>
-    
+             
+@* Chuyển tab *@
 <script>
     // Change To Profile Tab
     document.getElementById("btnInfo").addEventListener("click", function () {
@@ -235,34 +268,37 @@
     });
 </script>
 
+@* Xử lý *@
 <script>
     $(document).ready(function () {
-        var FriendMessageContent = document.getElementById("FriendMessageContent");
-        // Default
-        FriendMessageContent.innerHTML = "Xin chào, mình là @User.Claims.FirstOrDefault(c => c.Type == "Name").Value. Kết bạn với mình nhé!"
-        $("#FriendMessageCount").html(FriendMessageContent.innerText.length + "/150 ký tự")
+        if ('@ViewBag.Case' === '1') {
+            var FriendMessageContent = document.getElementById("FriendMessageContent");
+            // Default
+            FriendMessageContent.innerHTML = "Xin chào, mình là @User.Claims.FirstOrDefault(c => c.Type == "Name").Value. Kết bạn với mình nhé!"
+            $("#FriendMessageCount").html(FriendMessageContent.innerText.length + "/150 ký tự")
 
-        // Xử lý giới hạn ký tự
-        FriendMessageContent.addEventListener('input', function (e) {
-            // Nếu vượt quá giới hạn ký tự
-            if ($(this).text().length > 150) {
-                e.preventDefault();
-            }
+            // Xử lý giới hạn ký tự
+            FriendMessageContent.addEventListener('input', function (e) {
+                // Nếu vượt quá giới hạn ký tự
+                if ($(this).text().length > 150) {
+                    e.preventDefault();
+                }
 
-            // Cập nhật độ dài của Message
-            $("#FriendMessageCount").html($(this).text().length + "/150 ký tự")
-        });
+                // Cập nhật độ dài của Message
+                $("#FriendMessageCount").html($(this).text().length + "/150 ký tự")
+            });
 
-        // Border setting
-        FriendMessageContent.addEventListener("focus", function () {
-            document.getElementById("FriendMessageContainer").style.border = "1px solid var(--bs-primary)";
-            document.getElementById("FriendMessageContainer").style.boxShadow = "rgba(100, 100, 111, 0.2) 0px 7px 29px 0px";
+            // Border setting
+            FriendMessageContent.addEventListener("focus", function () {
+                document.getElementById("FriendMessageContainer").style.border = "1px solid var(--bs-primary)";
+                document.getElementById("FriendMessageContainer").style.boxShadow = "rgba(100, 100, 111, 0.2) 0px 7px 29px 0px";
 
-        });
-        FriendMessageContent.addEventListener("blur", function () {
-            document.getElementById("FriendMessageContainer").style.border = "1px solid lightgray";
-            document.getElementById("FriendMessageContainer").style.boxShadow = "none";
-        });
+            });
+            FriendMessageContent.addEventListener("blur", function () {
+                document.getElementById("FriendMessageContainer").style.border = "1px solid lightgray";
+                document.getElementById("FriendMessageContainer").style.boxShadow = "none";
+            });
+        }
     });
 
     // Hàm đặt con trỏ về cuối sau khi cắt bớt nội dung
@@ -275,4 +311,31 @@
         sel.addRange(range);
     }
 
+    // Hàm tạo yêu cầu kết bạn
+    function AddFriend() {
+        showLoading(true);
+        $.ajax({
+            url: '@Url.Action("CreateFriendRequest", "Friend")',
+            type: 'POST',
+            data: {
+                Id: '@Model.Id',
+                SenderId: '@User.Claims.FirstOrDefault(c => c.Type == "UserId").Value',
+                ReceiverId: '@Model.User.Id',
+                Message: $('#FriendMessageContent').text()
+            },
+            success: function (data) {
+                if (data.isSuccess) {
+                    CloseModal()
+                    GetFriendRequestStatus()
+                    ShowThongBaoThanhCong(data.message)
+                } else {
+                    ShowThongBaoThatBai("Gửi lời mời kết bạn thành công")
+                }
+            },
+            error: function (xhr, error) {
+                ShowThongBaoThatBai(error)
+            }
+        });
+        showLoading(false);
+    }
 </script>
