--- a/FE/Views/Shared/_Layout.cshtml
+++ b/FE/Views/Shared/_Layout.cshtml
@@ -46,8 +46,6 @@
 
     <div class="modal fade" 
          id="modal-default" 
-         data-bs-backdrop="static" 
-         data-bs-keyboard="false" 
          tabindex="-1" 
          aria-labelledby="staticBackdropLabel" 
          aria-hidden="true">
@@ -68,30 +66,56 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
-    <script>
-        // Kết nối tới Hub SignalR từ API
-        const connection = new signalR.HubConnectionBuilder()
-            .withUrl("https://localhost:7181/messageHub") // URL API SignalR hub
-            .build();
+<script>
+    // Kết nối tới Hub SignalR từ API
+    const connection = new signalR.HubConnectionBuilder()
+        .withUrl("https://localhost:7181/messageHub") // URL API SignalR hub
+        .build();
 
-        // Hàm nhận tin nhắn từ server
-        connection.on("ReceiveMessage", function (user, message) {
-            console.log("ReceiveMessage: " + user + " - " + message);
-        });
+    // Hàm nhận tin nhắn từ server
+    connection.on("ReceiveMessage", function (user, message) {
+        console.log("ReceiveMessage: " + user + " - " + message);
+    });
 
-        // Kết nối tới Hub
-        connection.start().then(function () {
-            console.log("Connected to SignalR Hub");
-        }).catch(function (err) {
+    // Kết nối tới Hub
+    connection.start().then(function () {
+        console.log("Connected to SignalR Hub");
+    }).catch(function (err) {
+        console.error(err.toString());
+    });
+
+    // Send message
+    function sendMessage() {
+        connection.invoke("SendMessage", "Hoàng Nhi", "Xin chào").catch(function (err) {
             console.error(err.toString());
         });
+    }
 
-        // Send message
-        function sendMessage() {
-            connection.invoke("SendMessage", "Hoàng Nhi", "Xin chào").catch(function (err) {
-                console.error(err.toString());
-            });
-        }
-    </script>
+    // Chuyển giao diện nhắn tin với User
+    function transToChatScreen(userId) {
+        event.stopPropagation(); // Ngăn sự kiện click lan lên div
+        showLoading(true)
+        $.ajax({
+            url: "@Url.Action("TransToChatScreen", "Message")",
+            type: "POST",
+            data: {
+                Id: userId
+            },
+            success: function (response) {
+                showLoading(false)
+                if (response.isSuccess === undefined) {
+                    CloseModal()
+                    $("#Messages").html(response)
+                } else {
+                    ShowThongBaoThatBai(response.message)
+                }
+            },
+            error: function (xhr, error) {
+                showLoading(false)
+                ShowThongBaoThatBai(error)
+            }
+        })
+    }
+</script>
 </body>
 </html>
